Bug 1614585: Use background thread to shut down AudioSession on all Windows versions r=jmathies a=jcristau

Bug 1419488 moved AudioSession shutdown to a background thread on Windows 7 because it was leading to shutdown timeouts there.  Since then, audio seems to be inspiring timeouts on other versions of Windows as well.  This patch extends the Windows 7 work to all versions of Windows.

Bug 1430907 is removing AudioSession from content processes.  This is the only place we have seen these crashes but AudioSession is also used in the main and plugin processes, so we want this patch to preempt issues with those processes.

Differential Revision: https://phabricator.services.mozilla.com/D64465